--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
+    "api": "nx serve api-starter",
+    "client": "nx serve next-starter",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
@@ -27,12 +29,17 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -40,12 +47,16 @@
     "@babel/preset-env": "7.12.13",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.0.8",
     "@nrwl/cypress": "12.0.8",
     "@nrwl/eslint-plugin-nx": "12.0.8",
     "@nrwl/jest": "12.0.8",
     "@nrwl/linter": "12.0.8",
+    "@nrwl/nest": "12.0.8",
     "@nrwl/next": "12.0.8",
+    "@nrwl/node": "12.0.8",
     "@nrwl/react": "12.0.8",
     "@nrwl/tao": "12.0.8",
     "@nrwl/web": "12.0.8",
