--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "next": "10.1.3",
+    "next-auth": "^3.17.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
