--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "next": "10.1.3",
