refactor: move secrets to env file

--- a/apps/next-starter/.env
+++ b/apps/next-starter/.env
@@ -1,1 +1,4 @@
-NEXTAUTH_URL=http://localhost:4200
+NEXTAUTH_URL = http://localhost:4200
+# 
+GOOGLE_OAUTH_CLIENT_ID = 826478107421-psjilupapk79e5q5nena6ir07hup625c.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET = DDLphrsFtEWLSLU4qeKPbWbh
