--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "document-register-element": "1.13.1",
     "next": "10.1.3",
     "next-auth": "^3.17.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
