--- a/package.json
+++ b/package.json
@@ -26,26 +26,51 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prisma:migrate": "prisma migrate dev --schema=./apps/api-starter/prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema=./apps/api-starter/prisma/schema.prisma"
   },
   "private": true,
   "dependencies": {
+    "@casl/ability": "^5.2.2",
+    "@hapi/joi": "^17.1.1",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.10.6",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
+    "@ntegral/nestjs-sentry": "^2.0.6",
+    "@prisma/client": "^2.21.2",
+    "@sentry/node": "^6.3.1",
     "@tailwindcss/forms": "^0.3.2",
+    "apollo-server-express": "^2.23.0",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "connect-redis": "^5.1.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "cuid": "^2.1.8",
     "document-register-element": "1.13.1",
+    "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
+    "helmet": "^4.5.0",
+    "nestjs-stripe": "^0.4.1",
     "next": "10.1.3",
     "next-auth": "^3.17.2",
     "nprogress": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
+    "stripe": "^8.145.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -89,6 +114,7 @@
     "jest": "26.2.2",
     "postcss": "^8.2.4",
     "prettier": "2.2.1",
+    "prisma": "^2.21.2",
     "tailwindcss": "^2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
