feature: improvements to button component

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "api": "npm run prisma:gen && nx serve api-starter",
-    "client": "nx serve next-starter",
+    "api": "yarn prisma:gen && nx serve api-starter",
+    "client": "yarn tailwind:gen && nx serve next-starter",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
