refactor: improve apollo client & use viewer query

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ DATABASE_URL = postgres://postgres:postgres@localhost:5432/postgres
 
 # JWT
 JWT_SIGNING_KEY = jwt_secret_key
+
+# COMPANY SUPPORT EMAIL
+SUPPORT_EMAIL = support@app.com
+
+# BACKEND_URL - no /graphql
+BACKEND_URL = http://localhost:5000
