feature: util lib & login page updates

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ JWT_SIGNING_KEY = jwt_secret_key
 # COMPANY SUPPORT EMAIL
 SUPPORT_EMAIL = support@app.com
 
-# BACKEND_URL - no /graphql
-BACKEND_URL = http://localhost:5000
+# API_URL - no /graphql
+API_URL = http://localhost:5000
