--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@sentry/node": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.2",
+    "apollo-datasource": "^0.9.0",
     "apollo-server-express": "^2.23.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
