--- a/apps/api-starter/.env.example
+++ b/apps/api-starter/.env.example
@@ -20,3 +20,13 @@ STRIPE_CHECKOUT_CANCEL_REDIRECT_URL = redirect_url_cancel
 SENTRY_DSN = https://ranom@subdomain.ingest.sentry.io/projectid
 SENTRY_DEBUG = false
 SENTRY_LOG_LEVEL = 2
+
+# AWS
+AWS_S3_BUCKET = bucket_name
+AWS_S3_REGION = us-west-1
+AWS_S3_ACCESS_KEY_ID = access_key_id
+AWS_S3_SECRET_ACCESS_KEY = secret_access_key
+
+# IMGIX
+IMGIX_DOMAIN = appname.imgix.net
+IMGIX_SECURE_URL_TOKEN = some_token
