chore: upgrade to using tailwind 2.2.2 & jit compiler

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prisma:seed": "prisma db seed --preview-feature --schema=./apps/api-starter/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=./apps/api-starter/prisma/schema.prisma",
     "prisma:gen": "prisma generate --schema=./apps/api-starter/prisma/schema.prisma",
-    "tailwind:gen": "tailwindcss-cli build ./apps/next-starter/styles/tailwind.css -o ./apps/next-starter/styles/tailwind.generated.css"
+    "tailwind:gen": "tailwindcss -i ./apps/next-starter/styles/tailwind.css -o ./apps/next-starter/styles/tailwind.generated.css --jit",
+    "tailwind:watch": "tailwindcss -i ./apps/next-starter/styles/tailwind.css -o ./apps/next-starter/styles/tailwind.generated.css --watch --jit"
   },
   "private": true,
   "dependencies": {
@@ -62,7 +63,7 @@
     "@prisma/client": "^2.25.0",
     "@sentry/node": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/forms": "^0.3.3",
     "apollo-datasource": "^0.9.0",
     "apollo-server-express": "^2.23.0",
     "bcrypt": "^5.0.1",
@@ -136,8 +137,7 @@
     "postcss": "^8.2.4",
     "prettier": "2.2.1",
     "prisma": "^2.25.0",
-    "tailwindcss": "^2.1.2",
-    "tailwindcss-cli": "^0.1.2",
+    "tailwindcss": "^2.2.2",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.1.4"
