chore: test coverage for form components

--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@casl/ability": "^5.2.2",
     "@casl/prisma": "*",
     "@casl/react": "^2.2.2",
-    "@chaunceyau/react-components": "^0.2.17",
     "@devoxa/prisma-relay-cursor-connection": "^1.1.1",
     "@hapi/joi": "^17.1.1",
     "@headlessui/react": "^1.0.0",
@@ -64,6 +63,7 @@
     "@sentry/node": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
+    "@testing-library/jest-dom": "^5.14.1",
     "apollo-datasource": "^0.9.0",
     "apollo-server-express": "^2.23.0",
     "bcrypt": "^5.0.1",
@@ -85,7 +85,11 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2",
+    "react-hook-form": "^7.9.0",
+    "react-hot-toast": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
@@ -113,7 +117,7 @@
     "@nrwl/web": "12.0.8",
     "@nrwl/workspace": "12.0.8",
     "@testing-library/react": "11.2.6",
-    "@types/jest": "26.0.8",
+    "@types/jest": "^26.0.23",
     "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.5",
     "@types/react": "17.0.3",
@@ -133,6 +137,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "^6.0.0",
     "jest": "26.2.2",
+    "jest-dom": "^4.0.0",
     "lint-staged": ">=10",
     "postcss": "^8.2.4",
     "prettier": "2.2.1",
