--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.15.0",
+    "cross-fetch": "^3.1.4",
     "cuid": "^2.1.8",
     "dataloader": "^2.0.0",
     "document-register-element": "1.13.1",
@@ -150,6 +151,7 @@
     "jest": "26.2.2",
     "jest-dom": "^4.0.0",
     "lint-staged": ">=10",
+    "msw": "^0.30.0",
     "postcss": "^8.3.5",
     "prettier": "2.3.1",
     "prisma": "^2.26.0",
