--- a/apps/next-starter/tsconfig.json
+++ b/apps/next-starter/tsconfig.json
@@ -10,8 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
