refactor: functional delete file from upload input

--- a/apps/api-starter/.env.example
+++ b/apps/api-starter/.env.example
@@ -1,5 +1,6 @@
 # # # # # # # # # # # # #
-# API STARTER  ENV VARS #
+# DUPLICATE ME & RENAME #
+#   FILE TO JUST .ENV   #
 # # # # # # # # # # # # #
 
 # BASICS
