--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@casl/react": "^2.3.0",
     "@devoxa/prisma-relay-cursor-connection": "^1.1.1",
     "@hapi/joi": "^17.1.1",
-    "@headlessui/react": "^1.2.0",
+    "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.1",
     "@imgix/js-core": "^3.1.3",
     "@nestjs/common": "^7.6.18",
@@ -65,6 +65,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.14.1",
+    "@types/express-session": "^1.17.4",
     "apollo-datasource": "^0.9.0",
     "apollo-server-express": "^2.25.1",
     "bcrypt": "^5.0.1",
@@ -76,6 +77,7 @@
     "cuid": "^2.1.8",
     "dataloader": "^2.0.0",
     "document-register-element": "1.13.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
