--- a/apps/next-starter/.env.example
+++ b/apps/next-starter/.env.example
@@ -3,6 +3,10 @@
 # # # # # # # # # # # # #
 
 NEXTAUTH_URL = http://localhost:4200
+
 # 
 GOOGLE_OAUTH_CLIENT_ID = google_client_id
 GOOGLE_OAUTH_CLIENT_SECRET = google_secret
+
+# 
+TITLE_BAR_BASE="Monorepo Starter"
