--- a/apps/next-starter/.env.example
+++ b/apps/next-starter/.env.example
@@ -9,4 +9,4 @@ GOOGLE_OAUTH_CLIENT_ID = google_client_id
 GOOGLE_OAUTH_CLIENT_SECRET = google_secret
 
 # 
-TITLE_BAR_BASE="Monorepo Starter"
+TITLE_BAR_BASE = Monorepo Starter
